--- a/src/popup.html
+++ b/src/popup.html
@@ -3,16 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>AutoScroll</title>
-	<link href="../css/popup.css" rel="stylesheet" type="text/css">
-	<link href="../css/range.css" rel="stylesheet" type="text/css">
-	<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link href="../asset/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link href="../asset/css/popup.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div class="container">
-		<button type="button" class="btn btn-default btn-block" id='ctrl-btn' data-status="off">已停用</button>
-		<input type="range" max='150' min='10' name='speed' step='1' id='speed'>
-		<!-- 这个input 100对应1px -->
+		<button type="button" class="btn btn-primary btn-block" id='ctrl-btn' data-status="off"></button>
 	</div>
 </body>
-<script src='../js/popup.js'></script>
+<script src='./popup.js'></script>
 </html>
