修正资源加载逻辑, 避免在非图片页面加载css等资源

--- a/better-image-browser/src/demo.html
+++ b/better-image-browser/src/demo.html
@@ -3,9 +3,7 @@
 <head>
 	<link rel="stylesheet" href="../asset/css/context.standalone.css">
 	<link rel="stylesheet" href="../asset/css/toastr.css">
-	<script src="../node_modules/jquery/dist/jquery.min.js"></script>
-	<script src="./lib/context.js"></script>
-	<script src="./index.js"></script>
+	<script src="./content.js"></script>
 </head>
 
 <body style="margin: 0px; background: rgb(14, 14, 14);">
